--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -5,5 +5,5 @@
 {% block title %}Wild Series{% endblock %}
 
 {% block body %}
-<h1>Program ID: {{ id }}</h1>
+<h1>Program id: {{ id }}</h1>
 {% endblock %}
