Quête symfony 11 - Les relations bidirectionnelles avec Doctrine

--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -10,10 +10,10 @@
           <a class="nav-link text-white" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Catégoeries</a>
+          <a class="nav-link text-white" href="{{ path('program_index') }}">Programmes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Acteurs</a>
+          <a class="nav-link text-white" href="{{ path('category_index') }}">Catégoeries</a>
         </li>
       </ul>
     </div>
