--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -15,6 +15,12 @@
         <li class="nav-item">
           <a class="nav-link text-white" href="{{ path('category_index') }}">Catégoeries</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="{{ path('app_season_index') }}">Saisons</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="{{ path('app_episode_index') }}">Episodes</a>
+        </li>
       </ul>
     </div>
   </div>
