Quête symfony 18 - Doctrine relations 'Many-To-Many'

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -7,6 +7,10 @@ body {
 .navbar {
   background-color: #0074d9;
 }
+
+img {
+  width: 100%;
+}
 .img-ocean {
   position: relative;
   width: 100vw;
