--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -21,6 +21,9 @@
         <li class="nav-item">
           <a class="nav-link text-white" href="{{ path('app_episode_index') }}">Episodes</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="{{ path('actor_index') }}">Acteurs</a>
+        </li>
       </ul>
     </div>
   </div>
