--- a/templates/program/new.html.twig
+++ b/templates/program/new.html.twig
@@ -1,8 +1,20 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-    {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
-    {{ form_widget(form) }}
-    <button type="submit">Add program</button>
+<div class="container mt-4">
+        {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
+        {{ form_row(form.title, {'attr': {'class': 'form-control'}}) }}
+        {{ form_row(form.synopsis, {'attr': {'class': 'form-control'}}) }}
+        {{ form_row(form.poster, {'attr': {'class': 'form-control'}}) }}
+        {{ form_row(form.country, {'attr': {'class': 'form-control'}}) }}
+        {{ form_row(form.year, {'attr': {'class': 'form-control'}}) }}
+        {{ form_label(form.actors) }}
+        {{ form_widget(form.actors, {'attr': {'class': 'form-check-input'}, 'expanded': true, 'multiple': true}) }}
+        {{ form_errors(form.actors) }}
+
+        {{ form_row(form.category, {'attr': {'class': 'form-control'}}) }}
+
+        <button type="submit" class="mt-4 btn btn-primary" style="background-color: #0074d9; color: #ffffff;">Add program</button>
     {{ form_end(form) }}
+</div>    
 {% endblock %}
