--- a/templates/season/_form.html.twig
+++ b/templates/season/_form.html.twig
@@ -1,4 +1,12 @@
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
-{{ form_end(form) }}
+<div class="container mt-4">
+    {{ form_start(form) }}
+        {# {{ form_widget(form) }} #}
+        {{ form_row(form.number, {'attr': {'class': 'form-control'}}) }}
+        {{ form_row(form.year, {'attr': {'class': 'form-control'}}) }}
+        {{ form_row(form.description, {'attr': {'class': 'form-control'}}) }}
+        {{ form_row(form.program, {'attr': {'class': 'form-control'}}) }}
+        {# <button type="submit" class="btn mt-4" >{{ button_label|default('Save') }}</button> #}
+
+        <button type="submit" class="mt-4 btn btn-primary" style="background-color: #0074d9; color: #ffffff;">Add season</button>
+    {{ form_end(form) }}
+</div>
