--- a/templates/episode/_form.html.twig
+++ b/templates/episode/_form.html.twig
@@ -4,6 +4,7 @@
         {{ form_row(form.title, {'attr': {'class': 'form-control'}}) }}
         {{ form_row(form.number, {'attr': {'class': 'form-control'}}) }}
         {{ form_row(form.synopsis, {'attr': {'class': 'form-control'}}) }}
+        {{ form_row(form.duration, {'attr': {'class': 'form-control'}}) }}
         {{ form_row(form.season, {'attr': {'class': 'form-control'}}) }}
         {# <button type="submit" class="btn mt-4">{{ button_label|default('Save') }}</button> #}
         <button type="submit" class="mt-4 btn btn-primary" style="background-color: #0074d9; color: #ffffff;">Add episode</button>
