Quête symfony 22 - Upload de médias avec Vich Upload

--- a/templates/program/new.html.twig
+++ b/templates/program/new.html.twig
@@ -5,7 +5,7 @@
         {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
         {{ form_row(form.title, {'attr': {'class': 'form-control'}}) }}
         {{ form_row(form.synopsis, {'attr': {'class': 'form-control'}}) }}
-        {{ form_row(form.poster, {'attr': {'class': 'form-control'}}) }}
+        {{ form_row(form.posterFile, {'attr': {'class': 'form-control'}}) }}
         {{ form_row(form.country, {'attr': {'class': 'form-control'}}) }}
         {{ form_row(form.year, {'attr': {'class': 'form-control'}}) }}
         {{ form_row(form.category, {'attr': {'class': 'form-control'}}) }}
