--- a/templates/episode/show.html.twig
+++ b/templates/episode/show.html.twig
@@ -26,6 +26,11 @@
         </tbody>
     </table>
 
+    {% if is_granted('ROLE_USER') %}
+        <!-- Affiche le lien vers le formulaire d'ajout de commentaire -->
+        <a href="{{ path('comment_new', {'episodeId': episode.id}) }}">Ajouter un commentaire</a>
+    {% endif %}
+
     <a href="{{ path('app_episode_index') }}">back to list</a>
 
     <a href="{{ path('app_episode_edit', {'slug': episode.slug}) }}">edit</a>
