--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -25,20 +25,20 @@
           <a class="nav-link text-white" href="{{ path('actor_index') }}">Acteurs</a>
         </li>
       </ul>
+      <ul class="navbar-nav">
         {% if app.user %}
           {{ app.user.email }}
           <form action="{{ path('app_logout') }}" method="post">
             <button type="submit" class="nav-link text-white" style="background-color: transparent; border: none;">Se déconnecter</button>
           </form>
         {% else %}
-        <ul>
+          <li class="nav-item text-white">
+            <a class="nav-link text-white" href="{{ path('app_security') }}">Inscription</a>
+          </li>
           <a href="{{ path('app_login') }}" class="nav-link text-white">Se connecter</a>
-        </ul>
-        <ul class="navbar-nav">
-        <li class="nav-item text-white">
-          <a class="nav-link text-white" href="{{ path('app_security') }}">Inscription</a>
-        </li>
         {% endif %}
+      </ul>
     </div>
+    <button {{ stimulus_action('theme', 'toggleDarkMode') }}>Toggle dark mode</button>
   </div>
 </nav>
