--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -4,8 +4,23 @@
 {% endblock %}
 
 {% block body %}
-	<h1>Bienvenue !</h1>
+{# <div data-controller="symfony/ux-typed/typed"> #}
+	<div class="p-5" style="font-size: 2em;">
+        <span
+            {{ stimulus_controller('symfony/ux-typed', {
+                strings: [
+                    'Bienvenue sur Wild Series❤️',
+                    'Le meilleur site pour suivre tes séries préférées',
+                    'Découvre les dernières actus sur les séries du moment',
+                ],
+                loop: true,
+                showCursor: true,
+                cursorChar: '✨',
+            }) }}
+        ></span>
+    </div>
 	<div class="img-ocean">
 		<img  src="{{ asset('build/images/ocean.jpg') }}" alt="image d'un plongeur dans l'océan"/>
 	</div>
+{# </div>	 #}
 {% endblock %}
