--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"><strong>Wild Séries</strong></a>    
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
@@ -13,7 +13,7 @@
           <a class="nav-link text-white" href="{{ path('program_index') }}">Programmes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="{{ path('category_index') }}">Catégoeries</a>
+          {{ component('navbar') }}
         </li>
         <li class="nav-item">
           <a class="nav-link text-white" href="{{ path('app_season_index') }}">Saisons</a>
@@ -35,7 +35,7 @@
           <li class="nav-item text-white">
             <a class="nav-link text-white" href="{{ path('app_security') }}">Inscription</a>
           </li>
-          <a href="{{ path('app_login') }}" class="nav-link text-white">Se connecter</a>
+            <a href="{{ path('app_login') }}" class="nav-link text-white">Se connecter</a>
         {% endif %}
       </ul>
     </div>
